--- a/unit-5.html
+++ b/unit-5.html
@@ -824,7 +824,7 @@
                         <ul>
                             <li>HTML5 includes the <i>Geolocation API</i>, which allows websites to access the user's location.</li>
                             <i>Example:</i><br>
-                            <i>navigator.geolocation.getCurrentPosition(function(position) {<br>&emsp;alert(position.coords.latitude + ", " + position.coords.longitude);<br>});</i>
+                            <i>navigator.geolocation.<br/>getCurrentPosition(function(position) {&emsp;alert(position.coords.latitude + ", " + position.coords.longitude);<br>});</i>
                         </ul>
                     </li>
             
